<resources>
    <string name="app_name">TreeCutForms</string>
    <string name="title">FICHA TECNICA DE PODA DE ÁRBOLES DE LOS CORREDORES DE CIRCUITOS DEL SISTEMA DE DISTRIBUCION ELECTRICO ENERTOLIMA</string>
    <string name="contratista">CONTRATISTA</string>
    <string name="limpiaductos">LIMPIADUCTOS</string>
    <string name="contrato">CONTRATO:</string>
    <string name="nro_contrato">GD 052 - 2016</string>
    <string name="datosCuadrilla">DATOS DEL CUADRILLA</string>
    <string name="datosUbicacion">DATOS DE UBICACIÓN</string>
    <string name="datosArbol">DATOS DEL ÁRBOL</string>
    <string name="ficha_tecnica">FICHA TÉCNICA</string>
    <string name="datos_fotograficos">DATOS FOTOGRÁFICOS</string>
    <string name="sync_data">Subiendo datos, por favor espere. Está operación podría ser larga.</string>
    
    <!--Cuadrilla form-->
    <string name="consecutivo">CONSECUTIVO</string>
    <string name="movil">MOVIL</string>
    <string name="nro_orden">Nº ORDEN DE TRABAJO</string>
    <string name="nro_reporte">Nº REPORTE</string>
    <string name="cuadrillero">CUADRILLERO</string>
    <string name="operario_uno">OPERARIO 1</string>
    <string name="operario_dos">OPERARIO 2</string>
    <string name="operario_tres">OPERARIO 3</string>
    <string name="operario_cuatro">OPERARIO 4</string>

    <!--Ubicacion form-->
    <string name="fecha">FECHA</string>
    <string name="hora_salida">HORA SALIDA</string>
    <string name="hora_inicio">HORA INICIO DE LABORES</string>
    <string name="hora_fin">HORA FINAL DE LABORES</string>
    <string name="hora_llegada">HORA LLEGADA</string>
    <string name="municipio">MUNICIPIO</string>
    <string name="zona">ZONA</string>
    <string name="direccion">DIRECCIÓN</string>
    <string name="barrio_vereda">BARRIO/VEREDA</string>
    <string name="circuito">CIRCUITO</string>
    <string name="tension">TENSIÓN</string>
    <string name="labor_a_realizar">LABOR A REALIZAR</string>
    <string name="km_inicial">KILOMETRAJE INICIAL</string>
    <string name="km_final">KILOMETRAJE FINAL</string>

    <!--Arbol form-->
    <string name="especie">ESPECIE O NOMBRE</string>
    <string name="tratamiento">TRATAMIENTO</string>
    <string name="clase_poda">CLASE DE PODA</string>
    <string name="altura_inicial">ALTURA INICIAL</string>
    <string name="altura_final">ALTURA FINAL</string>
    <string name="baremo">BAREMO</string>
    <string name="pap">PAP</string>
    <string name="estado_fitosanitario">ESTADO FITOSANITARIO</string>
    <string name="diametro_inicial">DIAMETRO DE COPA INICIAL</string>
    <string name="diametro_final">DIAMETRO DE COPA FINAL</string>
    <string name="nro_plaqueta">Nº PLAQUETA</string>
    <string name="coordenada_x">CORDENADAS X</string>
    <string name="coordenada_y">CORDENADAS Y</string>

    <!--Fotos form-->
    <string name="antes_clic">ANTES\n(clic en icono para tomar foto)</string>
    <string name="despues_clic">DESPUÉS\n(clic en icono para tomar foto)</string>
    <string name="actual_clic">ACTUAL\n(clic en icono para tomar foto)</string>

    <string name="survey_save_alert_msg">Deseas Guardar Formulario?</string>
    <string name="survey_save">Guardar</string>
    <string name="common_cancel">Cancelar</string>
    <string name="info_exitosa">La información fue almacenada correctamente</string>
    <string name="info_failed">La información no pudo ser almacenada</string>
    <string name="gps_alert">Para realizar uso de esta aplicación, es necesario la activacion de gps</string>
    
    <string-array name="municipios">
        <item>Alvarado</item>
        <item>Anzoátegui</item>
        <item>Cajamarca</item>
        <item>Coello</item>
        <item>Espinal</item>
        <item>Flandes</item>
        <item>Ibagué</item>
        <item>Piedras</item>
        <item>Rovira</item>
        <item>San Luis</item>
        <item>Valle de San Juan</item>
        <item>Casabianca</item>
        <item>Herveo</item>
        <item>Lérida</item>
        <item>Líbano</item>
        <item>Murillo</item>
        <item>Santa Isabel</item>
        <item>Venadillo</item>
        <item>Villahermosa</item>
        <item>Ambalema</item>
        <item>Armero</item>
        <item>Falán</item>
        <item>Fresno</item>
        <item>Honda</item>
        <item>Mariquita</item>
        <item>Palocabildo</item>
        <item>Carmen de Apicalá</item>
        <item>Cunday</item>
        <item>Icononzo</item>
        <item>Melgar</item>
        <item>Villarrica</item>
        <item>Ataco</item>
        <item>Chaparral</item>
        <item>Coyaima</item>
        <item>Natagaima</item>
        <item>Ortega</item>
        <item>Planadas</item>
        <item>Rioblanco</item>
        <item>Roncesvalles</item>
        <item>San Antonio</item>
        <item>Alpujarra</item>
        <item>Dolores</item>
        <item>Guamo</item>
        <item>Prado</item>
        <item>Purificación</item>
        <item>Saldaña</item>
        <item>Suárez</item>
    </string-array>

    <string-array name="tension">
        <item>13,2Kv.</item>
        <item>34,5Kv.</item>
        <item>115Kv.</item>
        <item>230Kv.</item>
    </string-array>
    
    <string-array name="tratamiento">
        <item>Poda</item>
        <item>Tala</item>
    </string-array>

    <string-array name="poda">
        <item>Copa</item>
        <item>Lateral</item>
    </string-array>

    <string-array name="fitosanario">
        <item>Bueno</item>
        <item>Regular</item>
        <item>Malo</item>
    </string-array>

    <string name="format_coordinates">%1$s° %2$s\' %3$s\"</string>

    <string name="operario_cinco">OPERARIO 5</string>
    <string name="operario_seis">OPERARIO 6</string>

    <string name="activity_main_toolbar_title">Lista de Formularios</string>
    <string name="activity_main_empty_forms">Aún no tienes formularios guardados</string>
    <string name="activity_form_date_format">Realizado el %1$s/%2$s/%3$s a <las></las> %4$s:%5$s:%6$s</string>
    <string name="form_item_view_from_index_format">Formulario %1$s</string>

    <!-- ObBoarding -->
    <string name="lorem_ipsum">LOREM IPSUM DOLOR SIT AMET.\nCONSECTETUR ADIPISCING ELIT.</string>
    <string name="tired_of">TIRED OF</string>
    <string name="waste_time">WASTE TIME</string>
    <string name="request">REQUEST</string>
    <string name="your_service">YOUR SERVICE</string>
    <string name="save_time">SAVE TIME</string>
    <string name="with_espidy">WITH ESPIDY</string>

    <!-- Login -->
    <string name="lost_your_password">LOST YOUR PASSWORD?</string>
    <string name="need_an_account">NEED AN ACCOUNT?</string>
    <string name="enter">Ingresar</string>
    <string name="email_hint">EMAIL</string>
    <string name="password_hint">PASSWORD</string>

    <!-- Register -->
    <string name="full_name_user_hint">FULL NAME</string>
    <string name="telephone_user_hint">TELEPHONE</string>
    <string name="continue_button">CONTINUE!</string>
    <string name="login_facebook">LOG IN WITH FACEBOOK</string>
    <string name="processing_data">Processing data, please wait.</string>
    <string name="error_facebook">An error occurred when connecting to facebook, try again.</string>

    <!-- Second register screen -->
    <string name="mini_charge_cc">WE CHARGE ONLY BY CREDIT CARD\nAFTER YOUR SHIPMENT HAS ARRIVED\nQUIET YOUR DATA IS SAFE</string>
    <string name="scan_your_card">SCAN YOUR CARD</string>
    <string name="or_complete_fields">OR COMPLETE THE FIELDS PRESENTED BELOW</string>
    <string name="card_number_hint">CARD NUMBER</string>
    <string name="cvc_hint">CVC</string>
    <string name="skip_this_step">SKIP THIS STEP</string>
    <string name="create_account">CREATE ACCOUNT!</string>
    <string name="select_month">Select expiration month</string>
    <string name="select_year">Select expiration year</string>

    <!-- Validations -->
    <string name="email_validation">You must enter a valid email</string>
    <string name="email_empty_validation">You must enter a email</string>
    <string name="password_validation">You must enter a valid passoword</string>
    <string name="password_empty_validation">You must enter a password</string>

    <!-- Home -->
    <string name="bike">BIKE</string>
    <string name="moto">MOTORCYCLE</string>
    <string name="car">CAR</string>
    <string name="pick_up_now">PICK UP NOW!</string>
    <string name="pick_up_location">PICK UP LOCATION</string>
    <string name="drop_off_location">DROP OFF LOCATION</string>


    <!-- Menu -->
    <string name="welcome">WELCOME!</string>
    <string name="payments">PAYMENTS</string>
    <string name="history">HISTORY</string>
    <string name="help">HELP</string>
    <string name="settings">SETTINGS</string>
    <string name="version">Versión 1.0</string>
    <string name="title_activity_maps">Map</string>

    <!-- Confirm ship -->
    <string name="in_bike">IN BIKE</string>
    <string name="in_moto">IN MOTORCYCLE</string>
    <string name="in_car">IN CAR</string>
    <string name="pick_up">PICK UP:</string>
    <string name="drop_off">DROP OFF:</string>
    <string name="weight_rules">MAX. SHIPMENT OF 35 KG | MAX. WEIGHT OF 10 KG</string>
    <string name="confirm_your_shipping">CONFIRM YOUR SHIPPING</string>
    <string name="number_items_label">NUMBER OF ITEMS</string>
    <string name="what_shipping">PLEASE WRITE HERE WHAT IS IN YOUR SHIPPING</string>
    <string name="terms_shipment_first">IF YOU CONFIRM THIS SHIPMENT, YOU AGREE TO</string>
    <string name="terms_shipment_sec">THE TERMS AND CONDITIONS OF ESPIDY</string>
    <string name="cancel_order">CANCEL ORDER</string>
    <string name="confirm_now">CONFIRM NOW!</string>
    <string name="quantity_items">Pick quantity of items</string>
    <string name="format_items">%1$s items</string>

</resources>
