<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fecha"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:id="@+id/textViewFecha" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:singleLine="true"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:ems="10"
                android:id="@+id/editTextFecha" />
        </LinearLayout>

    </LinearLayout>

    <View style="@style/DividerHorizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hora_salida"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:id="@+id/textViewHoraSalida" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="time"
                android:textColor="@android:color/black"
                android:maxLines="1"
                android:id="@+id/editTextHoraSalida" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/DividerHorizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/hora_inicio"
                android:id="@+id/textViewHoraInicio" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:textColor="@android:color/black"
                android:singleLine="true"
                android:maxLines="1"
                android:ems="10"
                android:id="@+id/editTextHoraInicio" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/DividerHorizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hora_fin"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:id="@+id/textViewHoraFin" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:maxLines="1"
                android:ems="10"
                android:id="@+id/editTextHoraFin" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/DividerHorizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/hora_llegada"
                android:id="@+id/textViewHoraLlegada" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:singleLine="true"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:ems="10"
                android:id="@+id/editTextHoraLlegada" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/DividerHorizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/municipio"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:id="@+id/textViewMunicipio" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:ems="10"
                android:id="@+id/editTextMunicipio" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/DividerHorizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/zona"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:id="@+id/textViewZona" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLines="1"
                android:ems="10"
                android:textColor="@android:color/black"
                android:id="@+id/editTextZona" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/DividerHorizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/direccion"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:id="@+id/textViewDireccion" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:ems="10"
                android:id="@+id/editTextDireccion" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/DividerHorizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/barrio_vereda"
                android:id="@+id/textViewBarrioVereda" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@android:color/black"
                android:singleLine="true"
                android:maxLines="1"
                android:ems="10"
                android:id="@+id/editTextBarrioVereda" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/DividerHorizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/circuito"
                android:id="@+id/textViewCircuito" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:singleLine="true"
                android:maxLines="1"
                android:id="@+id/editTextCircuito" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/DividerHorizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/tension"
                android:id="@+id/textViewTension" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:singleLine="true"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:id="@+id/editTextTension" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/DividerHorizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/labor_a_realizar"
                android:id="@+id/textViewLaborRealizar" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:singleLine="true"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:id="@+id/editTextLaborRealizar" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/DividerHorizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/km_inicial"
                android:id="@+id/textViewKmInicial" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:inputType="number"
                android:singleLine="true"
                android:maxLines="1"
                android:ems="10"
                android:id="@+id/editTextKmInicial" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/DividerHorizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/km_final"
                android:id="@+id/textViewKmFinal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:inputType="number"
                android:singleLine="true"
                android:maxLines="1"
                android:ems="10"
                android:id="@+id/editTextKmFinal" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>